WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244853
Unreviewed, fix build of CompactPointerTuple
https://bugs.webkit.org/show_bug.cgi?id=244853
Summary
Unreviewed, fix build of CompactPointerTuple
Michael Catanzaro
Reported
2022-09-06 12:29:42 PDT
Unreviewed, fix build of CompactPointerTuple. This class needs std::exchange but doesn't #include <utility>.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2022-09-06 12:30:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4063
EWS
Comment 2
2022-09-06 13:53:38 PDT
Committed
254197@main
(4f2adf003382): <
https://commits.webkit.org/254197@main
> Reviewed commits have been landed. Closing PR #4063 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug