Unreviewed, fix build of CompactPointerTuple https://bugs.webkit.org/show_bug.cgi?id=244853

* Source/WTF/wtf/CompactPointerTuple.h:

Canonical link: https://commits.webkit.org/254197@main