Source/WTF/wtf/CompactPointerTuple.h
@@ -27,6 +27,7 @@
 #pragma once
 
 #include <type_traits>
+#include <utility>
 #include <wtf/FastMalloc.h>
 #include <wtf/MathExtras.h>
 #include <wtf/StdLibExtras.h>
